--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install black isort pytest
         pip install -r requirements.txt
-    - name: Format code with black
+    - name: Format code with black # Already done in pre-commit hooks
       run: black . --line-length 119
-    - name: Sort imports PEP8 guidelines with isort
-      run: isort . 
+    - name: Sort imports PEP8 guidelines with isort # Already done in pre-commit hooks
+      run: isort .
     - name: Test with pytest
       run: pytest
