--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install black isort pytest
         pip install -r requirements.txt
+    - name: Format code with black # Already done in pre-commit hooks
+      run: black . --line-length 119 --check --diff
     - name: Sort imports PEP8 guidelines with isort # Already done in pre-commit hooks
       run: isort . --check-only --diff
     - name: Test with pytest
