update ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,11 @@
-name: Python application CI
+name: Python CI
 
 on: [push, pull_request]
 
 jobs:
   build:
 
+    name: Python default CI workflow
     runs-on: ubuntu-latest
 
     steps:
@@ -26,8 +27,8 @@ jobs:
         pip install black isort pytest
         pip install -r requirements.txt
     - name: Format code with black # Already done in pre-commit hooks
-      run: black . --line-length 119
+      run: black . --line-length 119 --check --diff
     - name: Sort imports PEP8 guidelines with isort # Already done in pre-commit hooks
-      run: isort .
+      run: isort . --check-only --diff
     - name: Test with pytest
       run: pytest
